--- a/doceditor/frmexample.lfm
+++ b/doceditor/frmexample.lfm
@@ -1,52 +1,60 @@
 object ExampleForm: TExampleForm
-  ActiveControl = EFileName
   Caption = 'Example file'
-  ClientHeight = 84
-  ClientWidth = 400
+  ClientHeight = 85
+  ClientWidth = 404
   PixelsPerInch = 90
-  HorzScrollBar.Page = 401
-  VertScrollBar.Page = 85
+  HorzScrollBar.Page = 403
+  VertScrollBar.Page = 84
   Left = 437
-  Height = 84
+  Height = 85
   Top = 311
-  Width = 400
+  Width = 404
   object LEFileName: TLabel
-    Alignment = taRightJustify
     Caption = '&Filename'
     FocusControl = EFileName
     Layout = tlCenter
     ParentColor = True
+    AnchorSideTop.Control = EFileName
+    AnchorSideTop.Side = asrCenter
     Left = 12
-    Height = 24
-    Top = 16
+    Height = 12
+    Top = 21
     Width = 60
   end
   object BOK: TButton
+    Anchors = [akTop, akRight]
     Caption = '&OK'
     Default = True
     ModalResult = 1
+    TabOrder = 0
     Left = 312
-    Height = 25
+    Height = 26
     Top = 14
-    Width = 75
+    Width = 79
   end
   object BCancel: TButton
+    Anchors = [akTop, akRight]
     Cancel = True
     Caption = '&Cancel'
     ModalResult = 2
+    TabOrder = 1
     Left = 312
-    Height = 25
+    Height = 26
     Top = 48
-    Width = 75
+    Width = 79
   end
   object EFileName: TFileNameEdit
     DialogTitle = 'Select an example file'
     Filter = 'Pascal files |*.pp|Pascal files|*.pas'
     ButtonWidth = 23
     NumGlyphs = 1
+    Anchors = [akTop, akLeft, akRight]
+    TabOrder = 2
+    Anchors = [akTop, akLeft, akRight]
+    TabOrder = 2
     Left = 80
     Height = 23
     Top = 16
-    Width = 192
+    Width = 196
   end
 end
