--- a/ide/aboutfrm.lfm
+++ b/ide/aboutfrm.lfm
@@ -1,10 +1,9 @@
 object AboutForm: TAboutForm
-  ActiveControl = AboutPage
   Caption = 'About Lazarus'
   ClientHeight = 245
   ClientWidth = 577
   OnCreate = AboutFormCreate
-  PixelsPerInch = 96
+  PixelsPerInch = 112
   Position = poScreenCenter
   HorzScrollBar.Page = 576
   VertScrollBar.Page = 244
@@ -14,7 +13,6 @@ object AboutForm: TAboutForm
   Width = 577
   object Label1: TLabel
     Alignment = taCenter
-    BorderSpacing.OnChange = nil
     Caption = 'Version #:'
     ParentColor = True
     Left = 14
@@ -24,7 +22,6 @@ object AboutForm: TAboutForm
   end
   object Label2: TLabel
     Alignment = taCenter
-    BorderSpacing.OnChange = nil
     Caption = 'Date:'
     ParentColor = True
     Left = 14
@@ -33,7 +30,6 @@ object AboutForm: TAboutForm
     Width = 27
   end
   object Button1: TBitBtn
-    BorderSpacing.OnChange = nil
     Caption = 'Close'
     Glyph.Data = {
       F70200002F2A2058504D202A2F0A7374617469632063686172202A20626F7461
@@ -69,7 +65,6 @@ object AboutForm: TAboutForm
     Width = 75
   end
   object Notebook1: TNotebook
-    BorderSpacing.OnChange = nil
     PageIndex = 0
     Left = 215
     Height = 232
@@ -77,34 +72,36 @@ object AboutForm: TAboutForm
     Width = 353
     object AboutPage: TPage
       Caption = 'About'
-      ClientWidth = 345
-      ClientHeight = 206
-      Height = 206
-      Width = 345
+      ClientWidth = 349
+      ClientHeight = 202
+      Left = 2
+      Height = 202
+      Top = 28
+      Width = 349
       object AboutMemo: TMemo
         Align = alClient
-        BorderSpacing.OnChange = nil
         ReadOnly = True
         ScrollBars = ssAutoBoth
         TabOrder = 0
-        Height = 206
-        Width = 345
+        Height = 202
+        Width = 349
       end
     end
     object ContributorsPage: TPage
       Caption = 'Contributors'
-      ClientWidth = 345
-      ClientHeight = 206
-      Height = 206
-      Width = 345
+      ClientWidth = 349
+      ClientHeight = 202
+      Left = 2
+      Height = 202
+      Top = 28
+      Width = 349
       object ContributorsMemo: TMemo
         Align = alClient
-        BorderSpacing.OnChange = nil
         ReadOnly = True
         ScrollBars = ssBoth
         TabOrder = 0
-        Height = 206
-        Width = 345
+        Height = 202
+        Width = 349
       end
     end
   end
